# ansible-role-vaultwarden

./: .gitignore  README.md  ansible.cfg  inventory.yml  pyproject.toml  requirements.txt  site.yaml
.github/: FUNDING.yml
.github/workflows/: lint-test.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
roles/: vaultwarden
roles/vaultwarden/defaults/: main.yml
roles/vaultwarden/meta/: main.yml
roles/vaultwarden/tasks/: main.yml
tasks/: config.yml  main.yml
templates/: vaultwarden.cfg  vaultwarden.service  vaultwarden.service.j2
